# ICE-backend

./: .gitignore  README.md  app.py  app.py.old  pyproject.toml  run.bat  wsgi.py
ice/: main.py  model.py
ice/module/: __init__.py  edit.py  get.py
ice/routers/: __init__.py  api.py
module/img/: __init__.py
tests/: test_ice.py
views/: api_views.py
