[tool.poetry]
name = "ice"
version = "0.1.0"
description = ""
authors = ["aspark <dbzoseh84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
image = "^1.5.33"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "ice.main:main"
